<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/constraint_layout_backgorund"
    tools:context=".RegistrationActivity"
    android:id="@+id/main"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/usernamehint"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header2"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameteditview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/aclonica"
            android:textColorHint="@color/blue" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="0dp"
        android:layout_height="77dp"
        android:layout_marginTop="32dp"
        android:hint="@string/phonehint"
        app:counterEnabled="true"
        app:counterMaxLength="13"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:startIconDrawable="@drawable/phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneeditview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/aclonica" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:layout_marginTop="32dp"
        android:hint="@string/emailhint"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
        app:startIconDrawable="@drawable/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emaileditview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/aclonica"
            android:textColorHint="@color/blue" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signup"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/aclonica"
        android:text="@string/buttontext"
        app:backgroundTint="@color/dip_green2"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginTop="32dp"

        app:layout_constraintEnd_toEndOf="@+id/textInputLayout6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout6"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

    <TextView
        android:id="@+id/logintextview"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginTop="10dp"

        android:fontFamily="@font/aclonica"
        android:text="@string/existingusertext"
        android:textAlignment="center"
        android:textColor="@color/light_blue"
        android:textColorLink="@color/blue"
        app:layout_constraintEnd_toEndOf="@+id/signup"
        app:layout_constraintStart_toStartOf="@+id/signup"
        app:layout_constraintTop_toBottomOf="@+id/signup" />

    <TextView
        android:id="@+id/headerinfo"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/header1"
        android:textAlignment="center"
        android:textColor="@color/dip_green3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header2"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/header2"
        android:textAlignment="center"
        android:textColor="@color/dip_green3"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/headerinfo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/headerinfo"
        app:layout_constraintTop_toBottomOf="@+id/headerinfo" />
</androidx.constraintlayout.widget.ConstraintLayout>